perl (5.12.3-8) UNRELEASED; urgency=low

  * Move debian/check-control to debian/t/ to anticipate new package
    maintainer tests in the future.

 -- Niko Tyni <ntyni@debian.org>  Fri, 27 May 2011 07:31:40 +0300

perl (5.12.3-7) unstable; urgency=low

  * Fix failing tilde test when run under a UID without a passwd entry
    (Closes: #624850)
  * Adjust debian/check-control to work with strict version checks
    and release candidates
  * Add Breaks: mrtg (<< 2.16.3-3.1) (see #625695)
  * Add Breaks, Replaces, Provides for new dual-lived modules
    libshell-perl, libdevel-dprof-perl
  * Add Replaces, Provides for new deprecation module
    libperl4-corelibs-perl

 -- Dominic Hargreaves <dom@earth.li>  Thu, 19 May 2011 19:16:22 +0100

perl (5.12.3-6) unstable; urgency=low

  * Upload to unstable.

 -- Dominic Hargreaves <dom@earth.li>  Sun, 01 May 2011 17:40:10 +0100

perl (5.12.3-5) experimental; urgency=low

  * Add new debian/check-control script written by Niko, backported
    from 5.14 tree. This is used by maintainer targets in debian/rules
    to check Provides/Replaces/Breaks against bundled modules.
  * Apply upstream fix for Module::Corelist version number
  * Correct various Breaks version numbers and add Breaks, Replaces,
    Provides for new or missing dual-lived modules:
    - libmath-complex-perl
    - libextutils-command-perl
    - libdigest-perl
    - libextutils-install-perl

 -- Dominic Hargreaves <dom@earth.li>  Sat, 30 Apr 2011 20:47:53 +0100

perl (5.12.3-4) experimental; urgency=low

  * Revert gcc-4.3 on sparc workaround for #577016 which turned out to
    be a kernel bug, now fixed (#581571). gcc-4.3 is no longer available
    in sid.
  * Build-depend on unversioned libdb-dev (see #621383)
  * Merge 5.10.1-20 from unstable:
    + [SECURITY] CVE-2011-1487: taint laundering in lc, uc, et al.
      (Closes: #622817)
    + Make the package fail to build instead of silently dropping the
      DB_File module if -ldb doesn't work. (See #622916)
